# Ricochet

./: .codecov.yml  CMakeLists.txt  README.md
.github/workflows/: Client.yml  Core.yml  Linting.yml  Server.yml
Client/: CMakeLists.txt
Client/benchmarks/: CMakeLists.txt
Client/src/: CMakeLists.txt  main.cpp
Client/src/Client/: Game.cpp  Game.hpp
Client/tests/: CMakeLists.txt  client.hpp  main.cpp
Core/: CMakeLists.txt
Core/benchmarks/: CMakeLists.txt  Signal.bench.hpp
Core/src/: CMakeLists.txt
Core/src/Core/IMGUI/: IMGUI.hpp  IMGUI_SDL_GL.cpp  IMGUI_SDL_GL.hpp
Core/src/Core/Input/: Events.hpp  Input.cpp  Input.hpp  Keys.cpp  Keys.hpp  KeysSDL.hpp
Core/src/Core/Raytrace/: Camera.hpp  Frame.hpp  Hit.hpp  Ray.hpp  Scene.hpp  Utility.hpp
Core/src/Core/Raytrace/Material/: Material.cpp  Material.hpp
Core/src/Core/Raytrace/Shape/: Shape.cpp  Shape.hpp
Core/src/Core/Signal/: Connection.cpp  Connection.hpp  Disconnector.hpp  Signal.hpp  Slot.hpp
Core/src/Core/Texture/: TextureGL.cpp  TextureGL.hpp
Core/src/Core/Window/: Window.hpp  WindowNone.cpp  WindowNone.hpp  WindowSDL.cpp  WindowSDL.hpp
Core/tests/: CMakeLists.txt  Signal.test.hpp  core.hpp  main.cpp
cmake/: FetchThreadpool.cmake
